--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
-.app {
-  color: blueviolet;
-}
+@import './_nav.scss';
+@import './_header.scss';
+@import './_shopping.scss';
+@import './_news.scss';
+@import './_footer.scss';
